# riemannian_portfolio

./: README.md  pyproject.toml
riemannian_portfolio/: __init__.py  objectives.py
riemannian_portfolio/core/: bands.py  distributions.py  fisher.py  optim_ng_eg.py
riemannian_portfolio/eval/: ablation.py  backtest.py
riemannian_portfolio/models/: estimators.py
tests/: test_ablation_params.py  test_ablation_shapes.py  test_bands_and_fisher.py  test_objectives.py  test_optim.py  test_plotting_helper.py  test_trust_region.py
